# lispy

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yaml  main.yaml  test.yaml
doc/: common.sty  final.tex  grammar.ebnf  grammar_abstract.bnf  manual.tex  proposal.tex
doc/manual/: binding.tex  builtins.tex  forms.tex  scope.tex  types.tex
lispyc/: __init__.py  exceptions.py  nodes.py  parser.py  utils.py
lispyc/nodes/: __init__.py  base.py  elementary.py  special.py  types.py
lispyc/sexpression/: __init__.py  nodes.py  parser.py
lispyc/typechecker/: __init__.py  checker.py  types.py  unifier.py
requirements/: coverage.in  coverage.pip  coveralls.pip  dev.in  dev.pip  lint.in  lint.pip  pip-tools.in  pip-tools.pip  pytest.in  pytest.pip  requirements.pip  test.in  test.pip
resources/: grammar.lark
tests/: test_nodes.py  test_parser.py  test_parser_special_forms.py
tests/parser/: data.py  test_conditionals.py  test_lambda.py  test_lambda_and_define.py  test_let_and_set.py  test_parser.py  test_sexpression_parser.py  test_special_forms.py
tests/sexpression/: test_parser.py
tests/typechecker/: test_bindings.py  test_checker.py  test_conditionals.py  test_functions.py  test_lists.py  test_unifier.py
