[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
line_length = 100
profile = "black"
skip_gitignore = true
src_paths = ["lispyc"]

[tool.pyright]
include = ["lispyc"]

pythonPlatform = "All"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

reportImportCycles = "warning"
reportPrivateImportUsage = "warning"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov= --import-mode=importlib"
testpaths = ["tests"]

[tool.coverage.paths]
lispyc = [
    "lispyc",
    "/home/*/work/lispy/lispy/lispyc",
    "/Users/*/work/lispy/lispy/lispyc",
    "D:\\*\\lispy\\lispy\\lispyc",
]
tests = [
    "tests",
    "/home/*/work/lispy/lispy/tests",
    "/Users/*/work/lispy/lispy/tests",
    "D:\\*\\lispy\\lispy\\tests"
]

[tool.coverage.report]
fail_under = 80

[tool.coverage.run]
branch = true
data_file = "${COVERAGE_DATAFILE-.coverage}"
relative_files = false
source = ["lispyc", "tests"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"

[build-system]
requires = ["setuptools>=46", "setuptools_scm>=6.2", "wheel"]
build-backend = "setuptools.build_meta"
