[metadata]
name = lispyc
description = A compiler from a lisp-like language to Python, written in Python.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files =
    LICENSE
author = m_k
keywords = lisp, compiler
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Lisp
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Compilers
url = https://github.com/csun-comp430-s22/lispy
project_urls =
    Source = https://github.com/csun-comp430-s22/lispy
    Tracker = https://github.com/csun-comp430-s22/lispy/issues

[options]
packages = find:
python_requires = >=3.10
install_requires =
    lark>=1

[flake8]
docstring-convention = all
exclude = __pycache__,__pypackages__,venv,.venv
max-line-length = 100
ignore =
    E203, W503,
    # Missing Docstrings
    D100,D104,D105,D107,
    # Docstring Whitespace
    D203,D213,D214,D215,
    # Docstring Quotes
    D301,D302,
    # Docstring Content
    D401,D416,
    # Type Annotations
    ANN002,ANN003,ANN101,ANN102,ANN204,ANN206
per-file-ignores = **/__init__.py:F401,F403,F405,tests/*:D,ANN
pytest-fixture-no-parentheses = true
pytest-mark-no-parentheses = true
pytest-parametrize-names-type = list
pytest-parametrize-values-row-type = tuple
pytest-parametrize-values-type = list
ignore-names = mcs
